DEVBUG (duels): fix arrow too big for View Details in 12-wins decks

--- a/core/src/css/component/duels/desktop/duels-deck-stat-vignette.component.scss
+++ b/core/src/css/component/duels/desktop/duels-deck-stat-vignette.component.scss
@@ -119,10 +119,10 @@
 	}
 }
 
-.view-deck .icon {
-	width: 30px;
-	height: 19px;
-}
+// .view-deck .icon {
+// 	width: 30px;
+// 	height: 19px;
+// }
 
 .dust-cost {
 	display: flex;
